# sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  TESTING.md  networks.json  pyproject.toml
docs/: networks.md
examples/: basic.py
scripts/: test.sh
src/sodium_sdk/: __init__.py  addresses.py  evm.py  networks.py  normalize.py  types.py
tests/: test_addresses.py  test_normalize.py
